@@ -1,7 +1,5 @@
 ## Game > GameAnvil > Server Development Guide > Configuring and Running a Server
 
-
-
 ## Configuration
 
 GameAnvil can configure servers in two main ways. The most common method is to configure the server to run through the GUI via NHN Cloud's console. This is the method you will use for VM-based services or testing on the cloud. However, this method is cumbersome and inconvenient to use during development, so we provide the GameAnvilConfig.json file so that you can configure the server directly on your PC during development. The default path to this file is resources/ in your project. If you want to configure the server with multiple processes, each process will need its own GameAnvilConfig.json.
@@ -9,10 +7,12 @@ GameAnvil can configure servers in two main ways. The most common method is to c
 Some of the values you enter in this configuration file must match the values you use in your server code to register with the engine as annotations. For example, earlier we configured the GameNode as shown below. The service name "MyGame" used here must be set to the same in GameAnvilConfig.json, otherwise the service will not be found and the server will fail to start up.
 
 ```java
-@ServiceName("MyGame") // Register with the engine as a GameNode for a service named "MyGame"
-public class SampleGameNode extends BaseGameNode {
-    ...
-}
+
+var gameServiceBuilder = gameAnvilServerBuilder.createGameService("MyGame");
+gameServiceBuilder.gameNode(SampleGameNode::new, config -> {
+    // Add handler in here 
+});
+
 ```
 
 So, let's take a look at these.
@@ -31,10 +31,10 @@ Set common information that is required regardless of node configuration.
 
 ```json
 "common": {
-    "ipcIp": "127.0.0.1", // IP to use for server interprocess-communication (IPC) (specify the IP of the machine)
-    "meetEndPoints": ["127.0.0.1:18000"], // Peer information to synchronize clustering information with (use 18000 if you haven't changed the port)
-    "debugMode": false // option to prevent various timeouts from occurring when debugging, must be false in real world
-}
+    "ipcIp": "127.0.0.1", // IP address for internal network communication. (Specify the machine's IP address.)
+    "meetEndPoints": ["127.0.0.1:18000"], // Register the target node's common IP and ipcPort. (The server endpoint can be included; multiple entries can be listed.)
+    "debugMode": false // This option prevents various timeouts during debugging. This must be false in real-world use.
+},
 ```
 
 
@@ -55,10 +55,10 @@ Location nodes are actually system nodes that are responsible for user and room 
 
 ```json
 "location": {
-    "clusterSize": 1, // How many machines (VMs) does it consist of in total?
-    "replicaSize": 1, // Size of the replication group (number of masters + slaves)
-    "shardFactor": 2 // Factor for sharding
-}
+    "clusterSize": 1, // How many machines (VMs) does it consist of in total? [1 to 5]
+    "replicaSize": 1, // Size of the replication group (number of masters + slaves) [2 to 5]
+    "shardFactor": 2 // Factor for sharding [2 to 5]
+},
 ```
 
 > [Note]
@@ -88,7 +88,7 @@ Match nodes are the nodes that perform matchmaking, that is, they drive the matc
 
 ```json
 "match": {
-    "nodeCnt": 1
+    "nodeCnt": 1 // [0 to 99]
 },
 ```
 
@@ -113,18 +113,15 @@ Gateway nodes are the nodes that clients connect to, so you need to have the rig
 
 ```json
 "gateway": {
-    "nodeCnt": 4, // Number of nodes. (Nodes are numbered from 0)
-    "ip": "127.0.0.1", // IP to connect to the client.
-    "connectGroup": {
-        "tcp_socket": {
-            "port": 18200, // Port to connect to the client.
-            "idleClientTimeout": 240000 // Timeout after no data is sent or received. (not used if 0)  
-        },
-        "web_socket": {
-            "port": 18300,
-            "idleClientTimeout": 240000
-        }
+  "connectGroup": {   // Connection type.
+    "TCP_SOCKET": {
+      "port": 18200   // Port that will be connected to client. [1 to 66,535]
     }
+  },
+  "nodeCnt": 4,       // Number of nodes. (node numbers are assigned starting from 0) [0 to 99]
+  "duplicateLoginServices": {
+    "MyGame": ["MyChatting"]
+  }
 },
 ```
 
@@ -153,65 +150,101 @@ Game nodes are the nodes where actual game-related objects are created and conte
 
 ```json
 "game": [
-    { "game
-        "nodeCnt": 4, // The four game nodes will correspond to channels "beginner", "intermediate", "beginner", and "intermediate", respectively.
-        "serviceId": 1,
-        "serviceName": "Todo - Input My Service Name",
-        "channelIDs": ["beginner","intermediate","intermediate","beginner","intermediate"], // Channel IDs to assign to each node (doesn't have to be unique, "" means don't use channel)
-        "userTimeout": 5000 // Timeout to remove user objects after disconnect.
-    }
-]
+  {
+    "serviceId": 1, // Must be unique within the server group [0 to 99]
+    "serviceName": "MyGame", // Must be unique within the server group
+    "nodeCnt": 4, // Number of nodes. If nodeCnt is 0, no game nodes will be created. It is recommended to use the number of machine cores [0 to 99]
+    "channelIDs": [
+    ["Beginner"],
+    ["Intermediate"],
+    ["Beginner"],
+    ["Intermediate"]
+    ], // Channel IDs to assign to each node. (Does not have to be unique. Multiple "" strings can be used regardless of channel.)
+    "userTimeout": 5000 // Timeout for user object deletion after disconnect. [0 to 604800000 (7 days)]
+  }
+],
 ```
 
-
-> [Note 1]
+> [Note]
 
 > The service name that you used in your server code to register your game node class with the engine must be entered here in the settings. Here is an example of an annotation for a Game Node, where we used the service name "MyGame".*
 > 
 > ```java
-> @ServiceName("MyGame") // Register with the engine as a GameNode for a service named "MyGame"
-> public class SampleGameNode extends BaseGameNode {
->     ...
-> }
+> var gameServiceBuilder = gameAnvilServerBuilder.createGameService("MyGame");
+> gameServiceBuilder.gameNode(SampleGameNode::new, config -> {
+>   // Add handler in here
+> });
 > ```
 >
 > Therefore, you must set the "MyGame" service name in GameAnvilConfig as follows. The example below shows the "MyGame" service name mapped to the service ID "1". This service name and service ID must be the only values in the entire configuration.*
 >
 > ```json
 > "game": [
->     {
->        "nodeCnt": 4, // The four game nodes will correspond to channels "beginner", "intermediate", "beginner", and "intermediate", respectively.
->        "serviceId": 1,
->        "serviceName": "MyGame", // Service name
->        "channelIDs": ["beginner","intermediate","beginner","intermediate"], // Channel IDs to give to each node (does not need to be unique, "" means don't use channel)
->        "userTimeout": 5000 // How long to manage the user object without removing it from the server after the client disconnects.
->     },
->     {
->         "nodeCnt": 1,
->         "serviceId": 2,
->        "serviceName": "MyChatting", // Service name
->        "channelIDs": [""], // Channel IDs to be given to each node (does not need to be unique, "" means channel not used)
->        "userTimeout": 5000 // How long to manage the user object without removing it from the server after the client disconnects.
->     }
-> ]
+>   {
+>     "serviceId": 1,           // Must be unique across servers [0 to 99]
+>     "serviceName": "MyGame",  // Must be unique across servers
+>     "nodeCnt": 4,             // If the number of nodes, nodeCnt, is 0, no Game Node is created. It is recommended to enter the number of machine cores [0 to 99]
+>     "channelIDs": [
+>       ["Beginner"],
+>       ["Intermediate"],
+>       ["Beginner"],
+>       ["Intermediate"]
+>     ],                        // Channel ID to be assigned to each node. (Does not have to be unique. Multiple "" strings can be used to distinguish channels.)
+>     "userTimeout": 5000       // Timeout for user object removal after disconnect. [0 to 604,800,000 (7 days)]
+>   },
+>   {
+>     "serviceId": 2,             // Must be unique across servers [0 to 99]
+>     "serviceName": "MyChatting",// Must be unique across servers
+>     "nodeCnt": 1,               // If the number of nodes, nodeCnt, is 0, no Game Node is created. It is recommended to enter the number of machine cores [0 to 99]
+>     "channelIDs": [[""]],       // Channel ID to be assigned to each node. (Does not have to be unique. Multiple "" strings can be used to distinguish channels.)
+>     "userTimeout": 5000         // Timeout for user object removal after disconnect. [0 to 604,800,000 (7 days)]
+>   }
+> ],
 > ```
 >
 > The configuration example above additionally shows the "MyChatting" service. You can see that the service ID is "2", which is different from "MyGame".*
 
-> [Note 2]
+> [Note]
 
-> If the corresponding set("game") key-value is missing or nodeCnt is 0, the process will not create a game node.
+As shown in the above settings, the default channel configuration is one game node per thread.
 
-Each configuration item is described below.
+> If you use a lot of channels, but only a few channels are heavily populated, performance can degrade due to the lots of threads. Therefore, we support multiple game nodes per thread.
+> 
+> ```json
+> "game": [
+>   {
+>     "serviceId": 1,           // Must be unique across servers [0 to 99]
+>     "serviceName": "MyGame",  // Must be unique across servers
+>     "nodeCnt": 4,             // If the number of nodes, nodeCnt, is 0, no Game Node is created. It is recommended to enter the number of machine cores [0 to 99]
+>     "channelIDs": [
+>       ["Beginner", "Intermediate"], // Thread1
+>       ["Expert"]         // Thread2
+>     ],                        // Channel ID to be assigned to each node. (Does not have to be unique. Multiple "" strings can be used to distinguish channels.)
+>     "userTimeout": 5000       // Timeout for user object removal after disconnect. [0 to 604,800,000 (7 days)]
+>   }
+> ],
+>```
+> Game node: total 3 (igmore nodeCnt value)
+> 
+> Game node thread: total 2
+> 
+> Thread1: game node1 ("beginner"), game node2 ("intermediate")
+> 
+> Thread2: game node3 ("expert")
 
-| Name        | Description                                                                         | Default value |
-| ----------- |----------------------------------------------------------------------------| ------ |
-| nodeCnt     | Number of nodes                                                                      |        |
-| serviceId   | As the service ID, it must be the only numeric value in the entire server configuration, but can only be a value between 1 and 99.           |        |
-| serviceName | This is the service name and should be the only string in the entire server configuration. This service name is used in the annotation to register the game node with the engine. |        |
-| channelIDs  | This does not have to be the only value for the channel ID to be given to each node. <br>However, "" means that the channel is not used.          |        |
-| userTimeout | Sets how long to manage user objects without removing them from the server after the client disconnects.                       | 10000  |
+> [Note]
+>
+> If the key-value for the setting ("game") is missing or nodeCnt is 0, no game nodes will be created in the process.
 
+Each configuration item is described below:
+
+| Name | Description | Default |
+|------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------|
+| serviceId | The service ID. This must be a unique numeric value across the entire server configuration. <br/>Only values ​​between 0 and 99 are allowed. | 0 |
+| serviceName | The service name. This must be a unique string across the entire server configuration. <br/>This service name is used to register game nodes with the engine. | ​​|
+| nodeCnt | Sets the number of game nodes. <br /> If 0, no game nodes will be created. | 0 |
+| channelIDs | The channel IDs assigned to each node. These do not need to be unique. <br>However, "" indicates that no channels are used. | |
+| userTimeout | Sets the timeout time (ms) for removing a user object after disconnecting. <br/>If the user is not reconnected before the specified time elapses after the user status is disconnected, the user object will be deleted when the logout process is completed. <br/>Sets the period for which the user object will be managed on the server without being removed after the client disconnects. <br/>If 0, the user object will not be maintained and will be deleted immediately. | 0 |
 
 ### Support
 
@@ -219,29 +252,28 @@ Support nodes are nodes that fulfill a secondary role. They can also communicate
 
 ```json
 "support": [
-    {
-        "nodeCnt": 2,
-        "serviceId": 3,
-        "serviceName": "DB",
-        "restIp": "127.0.0.1",
-        "restPort": 17251
-    },
-    {
-        "nodeCnt": 2,
-        "serviceId": 4,
-        "serviceName": "SampleWebSupport",
-        "restIp": "127.0.0.1",
-        "restPort": 17250
-    }
-],
+  {
+    "serviceId": 3,       // [0 to 99]
+    "serviceName": "DB",
+    "nodeCnt": 2,         // [0 to 99]
+    "restIp": "127.0.0.1",
+    "restPort": 18611     // REST connection port. [ 0 to 65,535]
+  },
+  {
+    "serviceId": 4,
+    "serviceName": "SampleWebSupport",
+    "nodeCnt": 2,
+    "restPort": 18612
+  }
+},
 ```
 
 
-> [Note 1]
+> [Note]
 >
-> As with the Game Node we saw earlier, the service name you used in your server code to register the Support Node class you created with the engine must be entered in the settings here.* 
+> As with the Game Node we saw earlier, the service name you used in your server code to register the Support Node class you created with the engine must be entered in the settings here.
 
-> [Note 2]
+> [Note]
 >
 > If the corresponding setting ("support") key-value is missing or nodeCnt is 0, the process will not create a support node.*
 
@@ -266,76 +298,39 @@ We're sharing the core of the VM options used by our development team to run Gam
 
 ### Recommended VM Options
 
-The javaagent option on the top line is only required if you are using Fiber Code in a JIT fashion. If you are using it in an AOT fashion, you should clear this line; we will cover [Bytecode Instrumentation](../server-basic/server-basic-06-bytecode-instrument)in more detail later. Set the memory size according to your system. For reference, the development team uses 4-6GB on 8GB machines and 10-12GB on 16GB machines, and GameAnvil uses G1GC as its official GC, so you should use G1GC unless you have a specific reason not to. Finally, we strongly recommend adding a minimal option for GC logs, especially during development.
+* Set the memory size according to your system. For reference, the development team uses 4-6GB on 8GB machines and 10-12GB on 16GB machines.
+* GameAnvil uses G1GC as its official GC, so you should use G1GC unless you have a specific reason not to.
+* We strongly recommend adding a minimal option for GC logs, especially during development.
 
-####  Java 8 
+#### Java 21
 
 ```
--javaagent:YOUR_PATH\quasar-core-0.7.10-jdk8.jar=bm
--Xms4g
--Xmx4g
--XX:+UseG1GC
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.lang.invoke=ALL-UNNAMED 
+-Xms6g
+-Xmx6g
 -XX:MaxGCPauseMillis=100
 -XX:+UseStringDeduplication
 
--XX:+PrintGCDetails
--XX:+PrintGCTimeStamps
 -Xloggc:gc.log
 ```
 
-#### Java 11
-
-```
--javaagent:YOUR_PATH\quasar-core-0.8.0-jdk11.jar=bm
-
---add-opens=java.base/java.lang=ALL-UNNAMED
---illegal-access=deny
-
--Xms4g
--Xmx4g
--XX:+UseG1GC
--XX:MaxGCPauseMillis=100
--XX:+UseStringDeduplication
-
--Xlog:gc*,safepoint:./log/gc.log:time,level,tags
-```
-
-
+* The `--add-opens java.base/java.lang=ALL-UNNAMED` statement in the first line is a JVM option required because GameAnvil uses a custom virtual thread.
+Removing this setting may cause GameAnvil to malfunction.
+* The `--add-opens java.base/java.lang.invoke=ALL-UNNAMED` statement in the second line is a statement for GameAnvil to optimize reflection performance. Removing this option will still launch the game. But performance may be reduced.
 
 ### VM Options for GC Logs
 
 Options for GC logs are essential for tracking memory licks and the like, so we recommend adding the following GC log-related options at least during development if for no other reason. However, in production, you may need to add only some optimized options as needed, as they may affect performance. In addition to the options recommended above, you can add the following options for each Java version.
 
-#### Java 8
-```
--XX:+PrintGCDetails
--XX:+PrintGCApplicationStoppedTime
--XX:+PrintGCDateStamps
--XX:+PrintGCTimeStamps
--XX:+PrintHeapAtGC
--XX:+PrintReferenceGC
--Xloggc:YOUR_PATH/gc.log
-```
-You can also add file rotation options as follows
-```
--XX:+PrintGCDetails
--XX:+PrintGCApplicationStoppedTime
--XX:+PrintGCDateStamps
--XX:+PrintGCTimeStamps
--XX:+PrintHeapAtGC
--XX:+PrintReferenceGC
--XX:+UseGCLogFileRotation
--XX:NumberOfGCLogFiles=100
--XX:GCLogFileSize=10M
--Xloggc:YOUR_PATH/gc.log
-```
+#### Java 21
 
-#### Java 11
 ```
 -Xlog:gc*,safepoint:YOUR_PATH/gc.log:time,level,tags,uptime
 ```
-You can also add file rotation options as follows
+
+You can also add file rotation options as follows:
+
 ```
 -Xlog:gc*,safepoint:YOUR_PATH/gc.log:time,level,tags,uptime:filecount=100,filesize=10M
 ```
-
